<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="actionbar_item_add">Add</string>
    <string name="actionbar_item_download">downloader</string>
    <string name="actionbar_item_refresh">refresh</string>
    <string name="actionbar_modified_asc">Last Updated ASC</string>
    <string name="actionbar_modified_desc">Last Updated DESC</string>
    <string name="actionbar_names_asc">Names ASC</string>
    <string name="actionbar_names_desc">Names DESC</string>
    <string name="actionbar_score_asc">Score ASC</string>
    <string name="actionbar_score_desc">Score DESC</string>
    <string name="actionbar_sort_anime">sort</string>
    <string name="add_shows">Add</string>
    <string name="agree">Yes</string>
    <string name="app_name">AnYme</string>
    <string name="app_name_alpha">AnYme Alpha</string>
    <string name="app_update_url_json">https://raw.githubusercontent.com/zunjae/anyme_download/master/download</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cantLogin">Can&apos;t login?</string>
    <string name="cantLoginMessage">If you can not login into MyAnimeList, then it means that your account is locked. Try logging in into MyAnimeList on your browser first. You may need to solve a captcha. If you still can&apos;t login, then send me a message on Reddit or Discord</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">ab305563-c63b-4c11-a6f4-5cd177a33d97</string>
    <string name="default_icon"></string>
    <string name="define_AndroidIconics">year;owner</string>
    <string name="define_FontAwesome">year;author;libraryName;libraryWebsite</string>
    <string name="define_fastadapter">year;owner</string>
    <string name="define_font_fontawesome">com.mikepenz.fontawesome_typeface_library.FontAwesome</string>
    <string name="define_materialdrawer">year;owner</string>
    <string name="define_materialize">year;owner</string>
    <string name="desktop_useragent">Mozilla/5.0</string>
    <string name="disagree">No</string>
    <string name="emoji_body">³ç¥N§TQ¤¢RÀêR§TX¦¤fTÆÝ¡S¦§£ª¤VªTÊè^</string>
    <string name="emoji_minus_one">©ì¤</string>
    <string name="emoji_one">êS£¥ £VXz§£¤¾</string>
    <string name="emoji_three">¬Ý¡£¦¥Yt¢X¥</string>
    <string name="emoji_two">®ç¨S¦¦ª</string>
    <string name="emoji_url">Âì¤¥m`_¢£ª^¡ª©©¥¿ê §¨g¥`²«¤a­igedbaomjkej¿Ýe^efbferce¢¯</string>
    <string name="emoji_zero">êS£¥ £VX¦</string>
    <string name="emulator_warning">It looks like you&apos;re running this on an Android Emulator or uncertified Android device. Some features may not work as expected</string>
    <string name="episode_picker_title">Set your Progress</string>
    <string name="episodes_asc">Episodes ASC</string>
    <string name="episodes_desc">Episodes DESC</string>
    <string name="fastadapter_lib_version">3.2.7</string>
    <string name="faw_500px">faw_500px</string>
    <string name="faw_address_book">faw_address_book</string>
    <string name="faw_address_book_o">faw_address_book_o</string>
    <string name="faw_address_card">faw_address_card</string>
    <string name="faw_address_card_o">faw_address_card_o</string>
    <string name="faw_adjust">faw_adjust</string>
    <string name="faw_adn">faw_adn</string>
    <string name="faw_align_center">faw_align_center</string>
    <string name="faw_align_justify">faw_align_justify</string>
    <string name="faw_align_left">faw_align_left</string>
    <string name="faw_align_right">faw_align_right</string>
    <string name="faw_amazon">faw_amazon</string>
    <string name="faw_ambulance">faw_ambulance</string>
    <string name="faw_american_sign_language_interpreting">faw_american_sign_language_interpreting</string>
    <string name="faw_anchor">faw_anchor</string>
    <string name="faw_android">faw_android</string>
    <string name="faw_angellist">faw_angellist</string>
    <string name="faw_angle_double_down">faw_angle_double_down</string>
    <string name="faw_angle_double_left">faw_angle_double_left</string>
    <string name="faw_angle_double_right">faw_angle_double_right</string>
    <string name="faw_angle_double_up">faw_angle_double_up</string>
    <string name="faw_angle_down">faw_angle_down</string>
    <string name="faw_angle_left">faw_angle_left</string>
    <string name="faw_angle_right">faw_angle_right</string>
    <string name="faw_angle_up">faw_angle_up</string>
    <string name="faw_apple">faw_apple</string>
    <string name="faw_archive">faw_archive</string>
    <string name="faw_area_chart">faw_area_chart</string>
    <string name="faw_arrow_circle_down">faw_arrow_circle_down</string>
    <string name="faw_arrow_circle_left">faw_arrow_circle_left</string>
    <string name="faw_arrow_circle_o_down">faw_arrow_circle_o_down</string>
    <string name="faw_arrow_circle_o_left">faw_arrow_circle_o_left</string>
    <string name="faw_arrow_circle_o_right">faw_arrow_circle_o_right</string>
    <string name="faw_arrow_circle_o_up">faw_arrow_circle_o_up</string>
    <string name="faw_arrow_circle_right">faw_arrow_circle_right</string>
    <string name="faw_arrow_circle_up">faw_arrow_circle_up</string>
    <string name="faw_arrow_down">faw_arrow_down</string>
    <string name="faw_arrow_left">faw_arrow_left</string>
    <string name="faw_arrow_right">faw_arrow_right</string>
    <string name="faw_arrow_up">faw_arrow_up</string>
    <string name="faw_arrows">faw_arrows</string>
    <string name="faw_arrows_alt">faw_arrows_alt</string>
    <string name="faw_arrows_h">faw_arrows_h</string>
    <string name="faw_arrows_v">faw_arrows_v</string>
    <string name="faw_assistive_listening_systems">faw_assistive_listening_systems</string>
    <string name="faw_asterisk">faw_asterisk</string>
    <string name="faw_at">faw_at</string>
    <string name="faw_audio_description">faw_audio_description</string>
    <string name="faw_backward">faw_backward</string>
    <string name="faw_balance_scale">faw_balance_scale</string>
    <string name="faw_ban">faw_ban</string>
    <string name="faw_bandcamp">faw_bandcamp</string>
    <string name="faw_bar_chart">faw_bar_chart</string>
    <string name="faw_barcode">faw_barcode</string>
    <string name="faw_bars">faw_bars</string>
    <string name="faw_bath">faw_bath</string>
    <string name="faw_battery_empty">faw_battery_empty</string>
    <string name="faw_battery_full">faw_battery_full</string>
    <string name="faw_battery_half">faw_battery_half</string>
    <string name="faw_battery_quarter">faw_battery_quarter</string>
    <string name="faw_battery_three_quarters">faw_battery_three_quarters</string>
    <string name="faw_bed">faw_bed</string>
    <string name="faw_beer">faw_beer</string>
    <string name="faw_behance">faw_behance</string>
    <string name="faw_behance_square">faw_behance_square</string>
    <string name="faw_bell">faw_bell</string>
    <string name="faw_bell_o">faw_bell_o</string>
    <string name="faw_bell_slash">faw_bell_slash</string>
    <string name="faw_bell_slash_o">faw_bell_slash_o</string>
    <string name="faw_bicycle">faw_bicycle</string>
    <string name="faw_binoculars">faw_binoculars</string>
    <string name="faw_birthday_cake">faw_birthday_cake</string>
    <string name="faw_bitbucket">faw_bitbucket</string>
    <string name="faw_bitbucket_square">faw_bitbucket_square</string>
    <string name="faw_black_tie">faw_black_tie</string>
    <string name="faw_blind">faw_blind</string>
    <string name="faw_bluetooth">faw_bluetooth</string>
    <string name="faw_bluetooth_b">faw_bluetooth_b</string>
    <string name="faw_bold">faw_bold</string>
    <string name="faw_bolt">faw_bolt</string>
    <string name="faw_bomb">faw_bomb</string>
    <string name="faw_book">faw_book</string>
    <string name="faw_bookmark">faw_bookmark</string>
    <string name="myanimelist_unknown_series_count_message">Since it is unknown how many episodes this Anime has according to MyAnimeList, you have to manually enter how many episodes you have watched.</string>
    <string name="nextRelease">Next Release ASC</string>
    <string name="nextReleaseDesc">Next Release DESC</string>
    <string name="openKissAnime">Open KissAnime</string>
    <string name="preference_about_settings_category">preference_about_settings_category</string>
    <string name="preference_key_author">preference_key_author</string>
    <string name="preference_key_loadDataOnStartup">preference_key_auto_loadV2</string>
    <string name="preference_key_recommend">preference_key_recommend</string>
    <string name="preference_key_reddit">preference_key_reddit</string>
    <string name="preference_key_version_name">preference_key_versionName</string>
    <string name="preference_menu_about">preference_menu_about</string>
    <string name="preference_menu_appearance">preference_menu_appearance</string>
    <string name="preference_menu_downloading">preference_menu_downloading</string>
    <string name="preference_menu_misc">preference_menu_misc</string>
    <string name="preference_menu_storage">preference_menu_storage</string>
    <string name="preference_menu_streaming">preference_menu_streaming</string>
    <string name="preference_menu_troubleshoot">preference_menu_troubleshoot</string>
    <string name="preferences_startup_application_summary">Synchronize your MyAnimeList profile when you start the app</string>
    <string name="progress_Desc">Progress DESC</string>
    <string name="progress_asc">Progress ASC</string>
    <string name="setup_login_button">Login</string>
    <string name="start_date_asc">Start Date ASC</string>
    <string name="start_date_desc">Start Date DESC</string>
</resources>