<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res-auto" fancy:orientation="vertical" fancy:background="@drawable/gradient_background" fancy:layout_width="match_parent" fancy:layout_height="match_parent">
    <LinearLayout fancy:orientation="vertical" fancy:padding="@dimen/login_activity_padding_root" fancy:layout_width="match_parent" fancy:layout_height="wrap_content">
        <TextView fancy:textSize="40sp" fancy:textColor="0x106000b" fancy:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" fancy:id="@+id/setupActivityAppName" fancy:layout_width="match_parent" fancy:layout_height="match_parent" fancy:text="@string/app_name" />
        <TextView fancy:textSize="14sp" fancy:textStyle="italic" fancy:textColor="0x106000b" fancy:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" fancy:layout_width="match_parent" fancy:layout_height="match_parent" fancy:text="Login with your MyAnimeList account" />
        <EditText fancy:textColor="0x106000b" fancy:textColorHint="0x106000b" fancy:id="@+id/setupInputUsername" fancy:background="@color/setup_button_login_inactive" fancy:padding="10dp" fancy:layout_width="match_parent" fancy:layout_height="wrap_content" fancy:layout_marginTop="15dp" fancy:hint="Username (not your email)" fancy:maxLines="1" fancy:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" />
        <EditText fancy:textColor="0x106000b" fancy:textColorHint="0x106000b" fancy:id="@+id/setupInputPassword" fancy:background="@color/setup_button_login_inactive" fancy:padding="10dp" fancy:layout_width="match_parent" fancy:layout_height="wrap_content" fancy:layout_marginTop="5dp" fancy:hint="Password" fancy:maxLines="1" fancy:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
        <CheckBox fancy:theme="@style/WhiteEnabledSwitch" fancy:textColor="0x106000b" fancy:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" fancy:id="@+id/activitySetupShowPassword" fancy:layout_width="wrap_content" fancy:layout_height="match_parent" fancy:layout_marginTop="15dp" fancy:text="Show Password" />
        <mehdi.sakout.fancybuttons.FancyButton fancy:id="@+id/setupLoginButton" fancy:paddingLeft="5dp" fancy:paddingTop="15dp" fancy:paddingRight="5dp" fancy:paddingBottom="15dp" fancy:layout_width="match_parent" fancy:layout_height="wrap_content" fancy:layout_marginTop="15dp" fancy:text="@string/setup_login_button" fancy:fb_borderColor="#99ffffff" fancy:fb_borderWidth="1dp" fancy:fb_defaultColor="#25000000" fancy:fb_focusColor="@color/button_focus_color" fancy:fb_radius="3dp" fancy:fb_text="LOGIN" fancy:fb_textColor="0x106000b" />
        <TextView fancy:textColor="0x106000b" fancy:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" fancy:id="@+id/useKissAnimeTextView" fancy:padding="3dp" fancy:layout_width="match_parent" fancy:layout_height="wrap_content" fancy:layout_marginTop="20dp" fancy:text="@string/openKissAnime" />
        <TextView fancy:textStyle="bold" fancy:textColor="0x106000b" fancy:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" fancy:id="@+id/cantLoginText" fancy:padding="3dp" fancy:layout_width="match_parent" fancy:layout_height="wrap_content" fancy:layout_marginTop="15dp" fancy:text="@string/cantLogin" />
    </LinearLayout>
    <LinearLayout fancy:orientation="horizontal" fancy:padding="@dimen/login_activity_padding_root" fancy:layout_width="match_parent" fancy:layout_height="wrap_content" fancy:layout_alignParentBottom="true">
        <mehdi.sakout.fancybuttons.FancyButton fancy:id="@+id/setupRegisterButton" fancy:paddingTop="15dp" fancy:paddingBottom="15dp" fancy:layout_width="UNKNOWN_DATA_0x1" fancy:layout_height="wrap_content" fancy:layout_marginBottom="5dp" fancy:text="@string/setup_login_button" fancy:layout_weight="1.0" fancy:layout_marginStart="5dp" fancy:fb_defaultColor="#40000000" fancy:fb_focusColor="@color/button_focus_color" fancy:fb_radius="0dp" fancy:fb_text="Register" fancy:fb_textColor="0x106000b" />
        <mehdi.sakout.fancybuttons.FancyButton fancy:id="@+id/setupForgotPassword" fancy:paddingTop="15dp" fancy:paddingBottom="15dp" fancy:layout_width="UNKNOWN_DATA_0x1" fancy:layout_height="wrap_content" fancy:layout_marginLeft="5dp" fancy:layout_marginRight="5dp" fancy:layout_marginBottom="5dp" fancy:text="@string/setup_login_button" fancy:layout_weight="1.0" fancy:fb_defaultColor="#40000000" fancy:fb_focusColor="@color/button_focus_color" fancy:fb_radius="0dp" fancy:fb_text="Forgot Password?" fancy:fb_textColor="0x106000b" />
    </LinearLayout>
</RelativeLayout>
